[tool.black]
line-length=120

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
skip = [".venv/", ".dockervenv/"]

[tool.mypy]
install_types = true
non_interactive = true

[tool.ruff]
line-length = 120


[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["HAN WENHAO <h898803709@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
black = "^24.3.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
isort = "^5.13.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
